[package]
name = "sql-type"
version = "0.25.1"
edition = "2024"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
keywords = [ "mysql", "postgesql", "sql", "typer" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/antialize/sql-type/"
homepage = "https://github.com/antialize/sql-type/"
description = "Typer for sql"

[dev-dependencies]
codespan-reporting = "0.12"

[dependencies]
sql-parse = "0.24.0"
